# FR01_robot

./: .gitignore  .rpi_exo_mac  .rpi_host_exo  README.md  arm_ik_config.json
.claude/: settings.json
QBOT_MJCF/: README.md  qbot.xml
QBOT_TRAIN/: README.md  train_qbot.py
arm/: arm_calib.py  config.py  feetech_arm.py  head_ghost_gui.py  joint_test_gui.py  motor_eprom_tool.py  qbot_ik_gui.py  read_motor_limits.py  test_mapping.py
deployment/deploye_robot/firmware/: Cargo.toml  README.md
deployment/deploye_robot/firmware/src/: actuator_manager.rs  behavior.rs  imu.rs  inference.rs  keyboard.rs  main.rs  policy_control.rs  robstride.rs  robstride_utils.rs  state_machine_utils.rs  typestate_socket.rs
deployment/deploye_robot/firmware/src/telemetry/: forwarder.rs  mod.rs  multi_fd_writer.rs  telemetry_main.rs  utils.rs
docs/: ARCHITECTURE.md  STATUS.md
exo/: README.md  exo_to_arm_bridge.py
hand/: README.md  camera_receiver.py  config.py  config_left.py  debug_read.py  finger_map_right.json  glove_receiver.py  hand_slider_gui.py  scan_hand_motors.py  tools_dump_bones.py  tools_fake_high_rate_sender.py  tools_max_throughput_sniff.py  tools_send_fake_vmc.py  vmc_receiver.py
leg/: README.md  fr01_requirements.txt
media_hub/: README.md  frame_client.py  index.html  media_hub.py  requirements.txt
scripts/: arm_remote_start.sh  arm_remote_stop.sh  arm_start.sh  find_rpi.sh  hand_camera_left_start.sh  hand_camera_start.sh  hand_glove_left_start.sh  hand_glove_start.sh  hand_slider_left_start.sh  hand_slider_right_start.sh  hand_stop.sh  head_lock.sh  head_stop.sh  (+7 more)
(+157 files in other folders)
