[package]
name = "faux-rtos"
version = "0.1.2"
edition = "2024"
build = "build.rs"

[dependencies]
socket2 = "0.5.9"
# socketcan = { version = "3.5", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
anyhow = "1"
libc = "0.2"
log = "0.4"
# simple_logger = "4.0.0"
env_logger = "0.10"
bytemuck = { version = "1.18", features = ["derive", "must_cast"] }
futures = "0.3"
pin-project = "1.0"
# take_mut = "0.2"
futures-enum = "0.1.17"
chrono = { version = "0.4", features = ["std"] }
paste = "1.0"
num_enum = "0.6"
enum-map = "2"
nix = { version = "0.30.1", features = ["uio", "fs"] }
nalgebra = "0.33"
enumflags2 = "0.7"

ndarray = "0.16"
ort = { version="2.0.0-rc.10" , features = ["ndarray"] }
flate2 = "1.0"
tar = "0.4"
clap = { version = "4", features = ["derive"] }

io-uring = "0.7.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29.0"
enum_dispatch = "0.3.13"
heapless = "0.8.0"
